  Thanks to Sebastian Schmidt for the patch
* Embed font in PDF only once
  Closes Debian bug #646298
  Thanks to noreply@example.com for the patch
* Decode HTML entities returned by Ocropus
  Closes Debian bug #646246
  Thanks to noreply@example.com for the patch
* Fixed saving PS
* Optionally start viewer after saving
  Closes Debian bug #651666
* Fixed email as PDF. Closes bug 3459124


1.0.0 (16.09.2011):

* Deal with version information from PDF::API2 
* Suppressed "End of file reached" message.
  Closes Debian bug #622844
  Thanks to Sebastian Schmidt for the patch
* Switch to OO interface for File::Temp, thus automatically clearing up
  unneeded temporary files. Closes Debian bug #563461
* Removed all blocking progress dialogs
  Closes bug 2670868, Debian bug #577144
* + Spinbuttons to crop dialog
* + Edit/Select/No OCR
* + Edit/Clear OCR
  Closes Debian bug #602578
* Combined Import and Open dialogs
  Closes Debian bug #617886
* + Tesseract 3.01 support. Closes bug 3246957, feature request 3081360
* Fix embedding of UTF-8 OCR output
* Update to Catalan translation (thanks to Norbux)
* Update to Dutch translation (thanks to Tico)
* Update to Hungarian translation (thanks to Gábor Sepsi)
* Update to Italian translation (thanks to Milo Casagrande)
* Update to Polish translation (thanks to pp/bs)
* Update to Russian translation (thanks to Eugene Marshal)
* Update to Spanish translation (thanks to R120X)
* Update to Turkish translation (thanks to Utku BERBEROĞLU)
* Update to Ukranian translation (thanks to Сергій Дубик)


0.9.32 (14.02.2011):

* Use Log::Log4perl for logging messages
* + Print option. Closes bug 2108705
* Fixed ignored unpaper border-margin options
* Fixed sensitivity of unpaper border-margin options on startup
* Switched from forks to threads
* + filters to the file selector
  Thanks to Jarl Stefansson for the patch
* Changed DPI->PPI.
* Retrieve metadata from resource file as unicode
  Thanks to Andy Fingerhut for the patch