@@ -13,6 +13,7 @@
 * Optionally start viewer after saving
   Closes Debian bug #651666
 * Fixed email as PDF. Closes bug 3459124
+* Fixed error message importing DjVu with spaces in filename
 
 
 1.0.0 (16.09.2011):
